adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error autem aliquid id ipsum veritatis quaerat. Nam quam dignissimos architecto ipsa porro? Cupiditate eveniet dolores dolor culpa deleniti laboriosam! Soluta, repellendus!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa non ducimus maxime obcaecati eveniet perferendis, quibusdam voluptate. Dolore quae doloremque odio quod at. Hic porro cupiditate maiores eos, vel sit?</p>
 </body>
 </html>
